# TCC_App_engenharia

./: .gitignore  .railway-rebuild  AGENTS.MD  RAILWAY_CONFIG.md  README.md  start.sh
agents/: README.md  (+7 more)
backend/: .dockerignore  .env.example  .gitignore  Dockerfile  STORAGE.md  docker-compose.yml  entrypoint.sh  langgraph.json  pyproject.toml  railway.toml  requirements.txt  visualize_graph.py
backend/config/: agent_config.json  prompts.yaml
backend/deploy/redis/: .env.example  docker-compose.prod.yml
backend/deploy/redis/config/: redis-master.conf  redis-replica.conf  sentinel.conf
backend/docs/: ONBOARDING_FLOW.md  ONBOARDING_IMPLEMENTATION.md  PROMPT_MANAGEMENT.md  TOKEN_PRICING.md
backend/scripts/: init-minio.sh  migrate_to_mongo.py
backend/scripts/redis/: backup-redis.sh  restore-redis.sh
backend/src/: main.py
backend/src/agents/: document_agent.py  progress_agent.py  report_agent.py  supervisor.py  visual_agent.py
backend/src/agents/interfaces/: __init__.py  agent_interface.py  base_agent.py  document_agent_interface.py  progress_agent_interface.py  report_agent_interface.py  visual_agent_interface.py
backend/src/application/auth/: authentication_service.py
backend/src/application/services/: __init__.py  chat_service.py  project_service.py  quota_service.py  timeline_service.py
backend/src/domain/: auth_models_mongo.py  chat_history_mongo.py  construction_project_mongo.py  file_metadata_mongo.py  image_timeline.py  token_manager_mongo.py
backend/src/infrastructure/: app_state.py  auth_service.py  dependencies.py  image_analysis.py  image_processor.py  llm_service.py  minio_storage_service.py  openrouter_service.py  rate_limiter.py  storage_service.py  timezone_utils.py  token_tracker_mongo.py
backend/src/presentation/: auth_routes.py
backend/tests/: QA_COMPREHENSIVE_REPORT.md  create_demo_user.py  create_test_user.py  debug_routes.py  qa_actual_implementation_report.json  qa_chat_lifecycle_report.json  qa_frontend_behavior_results.json  qa_frontend_behavior_test.py  qa_test_actual_chat_api.py  qa_test_chat_lifecycle.py
(+167 files in other folders)
